--- a/applications/Puma/meta/index.html
+++ b/applications/Puma/meta/index.html
@@ -10,7 +10,8 @@
 <body>
 
 <div class="wrap">
-    <p>Pumar is at large!</p>
+	<h3>Hello Puma! Go!</h3>
+    <p>Puma is at large!</p>
 </div>
 
 <script type="text/javascript" src="./main.js"></script>
